wip(controller): added repo_url to api and proto
